components/policies/development/kueue/queue-config/.chainsaw-test/resources/namespace-tenant-unpaused.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: (join('-', [$namespace, $suffix]))
  annotations:
    kueue.konflux-ci.dev/stop-policy: none
  labels:
    konflux-ci.dev/type: tenant
