components/policies/development/kueue/queue-config/.chainsaw-test/chainsaw-assert-clusterpolicy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: bootstrap-tenant-namespaces-queue
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
