components/policies/development/kueue/queue-config/.chainsaw-test/resources/expected-localqueue-kanary.yaml
apiVersion: kueue.x-k8s.io/v1beta1
kind: LocalQueue
metadata:
  name: pipelines-queue
  namespace: appstudio-kanary-exporter
spec:
  clusterQueue: cluster-pipeline-queue
  stopPolicy: None
