components/policies/development/kueue/queue-config/.chainsaw-test/resources/expected-localqueue-mintmaker.yaml
apiVersion: kueue.x-k8s.io/v1beta1
kind: LocalQueue
metadata:
  name: pipelines-queue
  namespace: mintmaker
spec:
  clusterQueue: cluster-pipeline-queue
