components/policies/development/kueue/queue-config/.chainsaw-test/resources/expected-localqueue-paused.yaml
apiVersion: kueue.x-k8s.io/v1beta1
kind: LocalQueue
metadata:
  name: pipelines-queue
  namespace: (join('-', [$namespace, $suffix]))
spec:
  clusterQueue: cluster-pipeline-queue
  stopPolicy: Hold
